# src/app/api/models/forgotten-password.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * ForgottenPassword object
+ */
+export interface ForgottenPassword {
+  confirmPassword: string;
+  newPassword: string;
+}
