# src/app/api/models/password.ts
@@ -1,7 +1,6 @@
 /* tslint:disable */
 /* eslint-disable */
-export interface Password {
-  confirmPassword?: string;
-  newPassword?: string;
-  password?: string;
-}
+import { ForgottenPassword } from './forgotten-password';
+export type Password = ForgottenPassword & {
+'password': string;
+};
