# src/app/api/models/portal-error.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface PortalError {
+  code: string;
+  details?: Array<string>;
+  message?: string;
+}
