# src/app/api/models/user.ts
@@ -1,8 +1,12 @@
 /* tslint:disable */
 /* eslint-disable */
+
+/**
+ * User object
+ */
 export interface User {
-  id?: number;
-  name?: string;
+  id: number;
+  name: string;
   token?: string;
-  username?: string;
+  username: string;
 }
